--- a/thousands/templates/menu.html
+++ b/thousands/templates/menu.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav navbar-right">
-  <li><a href="/admin/summits/new">Добавить</a></li>
+<!-- <li><a href="/admin/summits/new">Добавить</a></li> -->
   <li><a href="/">Карта</a></li>
   <li><a href="/table">Таблица</a></li>
   <li><a href="/about">О проекте</a></li>
