--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -27,6 +27,9 @@
   <script src="/static/Google.js"></script>
   <script src="/static/su1000.js"></script>
 
+  <link rel="stylesheet" href="/static/bootstrap-datepicker.min.css" />
+  <script src="/static/bootstrap-datepicker.min.js"></script>
+  <script src="/static/bootstrap-datepicker.ru.min.js"></script>
 </head>
 
 <body>
