--- a/thousands/templates/profile.html
+++ b/thousands/templates/profile.html
@@ -13,4 +13,9 @@
         </ul>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-offset-3 col-md-6">
+        <a href="{{ url_for('logout') }}" class="btn btn-default" role="button">Выход</a>
+    </div>
+</div>
 {% endblock %}
