Added titles on pages

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}О проекте{% endblock %}
 {% block content %}
 <div class="row">
   <div class="column-4">
