--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %} хр. {{ summit.ridge }} - {{ summit.format_name() }} {{ summit.format_name_alt() }} {% endblock %}
 {% block content %}
 <h2>
 {{ summit.format_name() }} <small>{{ summit.format_name_alt() }}
