--- a/thousands/templates/summit_edit.html
+++ b/thousands/templates/summit_edit.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}Редактировать вершину{% endblock %}
 {% block content %}
 {% if form.errors %}
 <div id="form-errors" class="alert alert-danger">
