--- a/thousands/templates/table.html
+++ b/thousands/templates/table.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}Список вершин{% endblock %}
 {% block content %}
 <ul class="nav nav-pills">
   <li role="presentation"><a id="orderSummitsByRidge" href="/table">Сортировать по хребтам</a></li>
