--- a/thousands/templates/climb_edit.html
+++ b/thousands/templates/climb_edit.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}Отметить восхождение{% endblock %}
 {% block content %}
 <h2>Отметить восхождение</h2>
 {% if form.errors %}
