--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="HandheldFriendly" content="True">
 
-  <title>Вершины Южного Урала выше тысячи метров</title>
+  <title>{% block title %} {% endblock %} - тысячники Южного Урала</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
