--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -5,6 +5,7 @@
 {{ summit.format_name() }} <small>{{ summit.format_name_alt() }}
 {% if current_user.admin %}
 <a href="{{ url_for('summit_edit', summit_id=summit.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
+<a href="{{ url_for('summit_delete', summit_id=summit.id) }}" class="simple-delete-confirm"><span class="glyphicon glyphicon-remove"></span></a>
 {% endif %}
 </small>
 </h2>
