Refactored summits dao

--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -19,7 +19,7 @@
 </div>
 <div class="row">
     <div class="col-md-3 text-right"><strong>Координаты:</strong></div>
-    <div class="col-md-6">{{ summit.lat }} {{ summit.lng }}</div>
+    <div class="col-md-6">{{ summit.coordinates[0] }} {{ summit.coordinates[1]}}</div>
 </div>
 {% if summit.interpretation %}
 <div class="row">
