--- a/thousands/static/style.css
+++ b/thousands/static/style.css
@@ -4,3 +4,7 @@ html, body, .container, #map { height: 100%; }
     height: 300px; 
 }
 body { padding-top: 70px;}
+
+.dl-horizontal dt {
+    white-space: normal;
+}
