Improved climbers list

--- a/thousands/templates/menu.html
+++ b/thousands/templates/menu.html
@@ -2,7 +2,7 @@
 <!-- <li><a href="/admin/summits/new">Добавить</a></li> -->
 <li {%  if active_page == 'index' %} class="active"{% endif %}><a href="{{ url_for('index')}}">Карта</a></li>
 <li {%  if active_page == 'table' %} class="active"{% endif %}><a href="{{ url_for('table') }}">Вершины</a></li>
-<!-- <li {%  if active_page == 'top' %} class="active"{% endif %}><a href="{{ url_for('top') }}">Восходители</a></li> -->
+<li {%  if active_page == 'top' %} class="active"{% endif %}><a href="{{ url_for('top') }}">Восходители</a></li>
 <li {%  if active_page == 'about' %} class="active"{% endif %}><a href="{{ url_for('about') }}">О проекте</a></li>
   {% if not current_user.is_authenticated() %}
   <li class="dropdown">
