--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -17,16 +17,23 @@
             <dt>Город</dt>
             <dd>{{ current_user.location }}</dd>
         </dl>
-        <ul class="list-inline">
-        {% for c in climbed %}
-        <li><a href="{{ url_for('summit', summit_id=c.id)}}">{{ c.format_name() }} {{ c.format_name_alt() }}</a></li>
-        {% endfor %}
-        </ul>
+        <a href="{{ url_for('logout') }}" class="btn btn-default" role="button">Выход</a>
     </div>
 </div>
 <div class="row">
     <div class="col-md-offset-3 col-md-6">
-        <a href="{{ url_for('logout') }}" class="btn btn-default" role="button">Выход</a>
     </div>
 </div>
+<h3>Восхождения</h3>
+<ul class="list-unstyled">
+    {% for c in climbed %}
+    <li>
+        <h4>
+            <a href="{{ url_for('summit', summit_id=c.summit.id)}}">{{ c.summit.format_name() }} {{ c.summit.format_name_alt() }}</a>
+            <small>{{ c['date'] }}</small>
+        </h4>
+        <p>{{ c['comment'] }}</p>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
