Improved user page

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -6,8 +6,8 @@
     <h4>Что это?</h4>
   </div>
   <div class="column-12">
-    <p>Данный проект является попыткой создать интернет-версию неформального туристического клуба восходителей на тысячники Южного Урала "Исилган". Каждый участник клуба ставит себе целью совершить восхождени на все вершины Южного Урала высотой более тысячи метров над уровнем моря. Историю клуба "Исилган" и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a>. На текущий момент реализован просмотр вершин на карте и в виде таблицы. В будущем планируется добавить возможность просмотра подробной информации о вершинах и фотографий. Основной же целью проекта является предоставление возможности каждому пользователю сайта вести учет личных восхождений.</p>
-    <p>Исходные коды сайта доступны на <a href="https://github.com/binrush/su1000">GitHub</a>.</p>
+    <p>Данный проект является попыткой создать интернет-версию неформального туристического клуба восходителей на тысячники Южного Урала "Исилган". Каждый участник клуба ставит себе целью совершить восхождени на все вершины Южного Урала высотой более тысячи метров над уровнем моря. Историю клуба "Исилган" и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a></p>
+    <p>Исходные коды сайта доступны на <a href="https://github.com/binrush/thousands">GitHub</a>.</p>
   </div>
 </div>
 
