--- a/thousands/templates/map.html
+++ b/thousands/templates/map.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div id="map"></div>
 <script>
+  {% if hl_summit != None %}
+  hl_summit = {{ hl_summit }};
+  {% endif %}
+  popup_toopen = undefined;
   document.body.onload = createMainMap;
 </script>
 {% endblock %}
