--- a/thousands/templates/top.html
+++ b/thousands/templates/top.html
@@ -11,9 +11,14 @@
     <tbody>
         {% for c in climbers %}
         <tr>
-            <td><a href="{{ url_for('user', user_id=c.id) }}">{{ c.name }}</a></td>
-            <td>{{ c.climbs }}</td>
-            <td>{{ loop.index }}</td>
+            <td class="vertical-align">
+                {% if c.preview_id %}
+                <img src="{{ url_for("image_get", image_id=c.preview_id)}}">
+                {% endif %}
+                <a href="{{ url_for('user', user_id=c.id) }}">{{ c.name }}</a>
+            </td>
+            <td class="vertical-align"><big>{{ c.climbs }}</big></td>
+            <td class="vertical-align"><big>{{ loop.index }}</big></td>
         </tr>
         {% endfor %}
     </tbody>
