--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block title %}Профиль{% endblock %}
 {% block content %}
-<h2>{{ user.name }} <small>{{ user.location }}</small></h2>
+<h2>{{ user.name }}
+    {% if user.location %}
+        <small>{{ user.location }}</small>
+    {% endif %}
+</h2>
 <div class="row">
     <div class="col-md-3 text-right">
         {% if user.image_id %}
