--- a/thousands/templates/menu.html
+++ b/thousands/templates/menu.html
@@ -5,13 +5,7 @@
 <li {%  if active_page == 'top' %} class="active"{% endif %}><a href="{{ url_for('top') }}">Восходители</a></li>
 <li {%  if active_page == 'about' %} class="active"{% endif %}><a href="{{ url_for('about') }}">О проекте</a></li>
   {% if not current_user.is_authenticated() %}
-  <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Вход<span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-          <li><a href="{{ g.vk_flow.step1_get_authorize_url() }}">vk.com</a></li>
-          <li><a href="{{ g.su_flow.step1_get_authorize_url() }}">southural.ru</a></li>
-      </ul>
-  </li>
+  <li><a href="{{ url_for('login') }}">Вход</a></li>
   {% else %}
   <li {%  if active_page == 'profile' %} class="active"{% endif %}><a href="{{ url_for('profile') }}">{{ current_user.name }}</a></li>
   {% endif %}
