--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -35,10 +35,15 @@
 {% endif %}
 <h3>
     Восходители
-    {% if climbers | length  == 0 or current_user != climbers[0]['user'] %} 
+    {% if not current_user.is_authenticated() %}
+        <small>(<a href="{{ url_for('login_form', r=url_for('climb_new', summit_id=summit.id)) }}" data-remote="false" data-toggle="modal" data-target="#authModal">Взошли на эту вершину?</a>)</small>
+    {% elif climbers | length  == 0 or current_user != climbers[0]['user'] %} 
         <small>(<a href="{{ url_for('climb_new', summit_id=summit.id) }}">Взошли на эту вершину?</a>)</small>
     {% endif %}
 </h3>
+{% if climbers | length == 0 %}
+Никто пока не зарегистрировал восхождение на эту вершину.
+{% endif %}
 <ul class="media-list">
     {% for c in climbers %}
     <li class="media">
