--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -17,6 +17,9 @@
     </div>
     <div class="col-md-6">
     <h3>Восхождения</h3>
+    {% if climbed | length == 0 %}
+    Вы еще не добавили ни одного восхождения. Найти вершину, на которую вы взошли можно <a href="{{ url_for('index') }}">на карте</a> или <a href="{{ url_for('table') }}">в таблице</a>.
+    {% endif %}
     <ul class="list-unstyled">
     {% for c in climbed %}
     <li>
